bhushan: text editor in email rupee in calc,

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -16,7 +16,7 @@
                                     <div class="col align-self-center">
                                         <input type="file" accept="image/png, image/jpeg" #files class="d-none"
                                             (input)="getFileInfo($event,'profile')" />
-                                        <label (click)="webcam();" class="kt-pointer text-primary"
+                                        <label (click)="webcam();" class="kt-pointer text-primary mandatory"
                                             style="font-weight: 600;">Change Profile
                                             Picture</label>
                                     </div>
