--- a/gold-admin-frontend/src/app/views/pages/notification-settings/email-alert/email-alert-add/email-alert-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/notification-settings/email-alert/email-alert-add/email-alert-add.component.html
@@ -52,6 +52,10 @@
                                 </mat-error>
                             </div>
                         </div>
+
+                        <div class="row kt-padding-t-15">
+                            <quill-editor></quill-editor>
+                        </div>
                     </div>
                 </div>
 
