--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -71,7 +71,7 @@
                 </select> -->
 
                 <ng-select [items]="states" bindLabel="name" bindValue="id" placeholder="Select State"
-                  (change)="getCities($event)" (clear)="resetCities();">
+                  (change)="getCities($event)">
 
                 </ng-select>
 
