--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/webcam-dialog/webcam-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/webcam-dialog/webcam-dialog.component.html
@@ -1,9 +1,12 @@
-<div style="text-align:center">
+<div style="text-align:center" class="view-container">
+	<img src="../../../../../assets/media/icons/cancel.svg" class="cancel" alt="" (click)="close()">
+
 	<div>
-		<webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
-		 [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable" [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
-		 (initError)="handleInitError($event)"></webcam>
-		<br/>
+		<webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
+			*ngIf="showWebcam" [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
+			[videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
+			(initError)="handleInitError($event)"></webcam>
+		<br />
 		<!-- <div class="actionBtn" (click)="triggerSnapshot();" title="Take Picture">📸</div>
 		<div class="actionBtn" (click)="showNextWebcam(true);" title="Switch Camera">🔁</div> -->
 	</div>
@@ -13,6 +16,9 @@
 <ul *ngFor="let error of errors">
 	<li>{{error | json}}</li>
 </ul> -->
-<div class="p-3">
-    <kt-modal-footer (action)="action($event)" [value]="'Click Picture'"></kt-modal-footer>
+<div class="p-2 camera-container">
+	<div (click)="triggerSnapshot();" title="Take Picture">
+		<img src="../../../../../assets//media//icons//camera.svg">
+	</div>
+	<!-- <kt-modal-footer (action)="action($event)" [value]="'Click Picture'"></kt-modal-footer> -->
 </div>
