--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
@@ -28,8 +28,9 @@
                             *ngIf="controls.goldDeductionWeight.errors?.required && controls.goldDeductionWeight.touched">
                             Required field
                         </mat-error>
-                        <mat-error *ngIf="controls.goldDeductionWeight.errors?.weight && controls.goldDeductionWeight.touched">
-                            <small>Net  Weight should be lesser then Gross  Weight</small>
+                        <mat-error
+                            *ngIf="controls.goldDeductionWeight.errors?.weight && controls.goldDeductionWeight.touched">
+                            <small>Net Weight should be lesser then Gross Weight</small>
                         </mat-error>
                     </div>
                 </div>
@@ -39,15 +40,15 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="goldNetWeight" readonly
-                            placeholder="0.00 gram" 
+                            placeholder="0.00 gram"
                             [class.isError]="controls.goldNetWeight.touched && controls.goldNetWeight.invalid">
                         <mat-error *ngIf="controls.goldNetWeight.errors?.required && controls.goldNetWeight.touched">
                             Required field
                         </mat-error>
-                       
+
                     </div>
                 </div>
-                
+
                 <div class="row kt-margin-t-10">
                     <div class="col-4 form-label">
                         <label for="" class="mandatory text-color">Karat</label>
@@ -128,7 +129,9 @@
                 <div class="row kt-margin-t-20 kt-margin-b-50">
                     <div class="offset-4 col-6">
                         <p class="text-gray font-weight-500 m-0">Total Amount</p>
-                        <h3 class=" text-color">{{loanAmount | currency :'INR'}}</h3>
+                        <h3 class=" text-color">
+                            <span class="currency">{{loanAmount | currency:'INR':'symbol' : '1.0-0'}}</span>
+                        </h3>
                     </div>
                 </div>
             </form>
