--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="col-7">
                         <input type="number" class="form-control" formControlName="finalLoanAmount"
-                            placeholder="0,00,000" (blur)="amountValidation()"
+                            placeholder="0,00,000" (blur)="amountValidation();getIntrest()"
                             [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
                         <mat-hint><small>Eligible Amount: <span class="currency">
                                     {{totalAmt | currency:'INR':'symbol' : '1.0-0'}}</span> </small></mat-hint>
@@ -236,22 +236,21 @@
                                 <tr *ngFor="let date of dateOfPayment;index as idx; last as last">
                                     <td>{{date.key | date :'mediumDate'}}</td>
 
-                                    <td [attr.rowspan]="colJoin" class="text-center" *ngIf="(idx%colJoin == 0 || colJoin == null)">
-                                         <span class="currency">
-                                            {{intrestAmount | currency:'INR'}}</span></td>
+                                    <td [attr.rowspan]="colJoin" class="text-center currency" *ngIf="(idx%colJoin == 0 || colJoin == null)">
+                                        
+                                            {{intrestAmount | currency:'INR'}}</td>
 
                                 </tr>
                             </tbody>
                             <tbody *ngIf="dateOfPayment.length%colJoin > 0 || colJoin != null">
                                 <tr *ngFor="let date of dateOfPayment;index as idx; last as last">
                                     <td>{{date.key | date :'mediumDate'}}</td>
-                                    <td [attr.rowspan]="colJoin" class="text-center"
+                                    <td [attr.rowspan]="colJoin" class="text-center currency"
                                         *ngIf="(idx%colJoin == 0 || colJoin == null) && (dateOfPayment.length%colJoin < dateOfPayment.length-idx)">
-                                        <span class="currency">
-                                            {{intrestAmount | currency:'INR' }}</span></td>
-                                    <td [attr.rowspan]="colJoin" class="text-center"
+                                            {{intrestAmount | currency:'INR' }}</td>
+                                    <td [attr.rowspan]="colJoin" class="text-center currency"
                                         *ngIf="(idx%colJoin == 0 || colJoin == null) && (dateOfPayment.length%colJoin >= dateOfPayment.length-idx)">
-                                        <span class="currency"> {{(intrestAmount /colJoin) * (dateOfPayment.length%colJoin) | currency : 'INR'}}</span>
+                                        {{(intrestAmount /colJoin) * (dateOfPayment.length%colJoin) | currency : 'INR'}}
                                     </td>
 
                                 </tr>
@@ -274,11 +273,12 @@
                             </tfoot>
                         </table>
                     </div>
-
-                    <div class="kt-margin-t-20 kt-margin-b-30 text-right">
-                        <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
-                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="col-11">
+            <div class="kt-margin-t-20 kt-margin-b-30 text-right">
+                <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
             </div>
         </div>
     </div>
