changes and bug fixes

--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
@@ -105,7 +105,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="emiFrom">
-                    <mat-header-cell *matHeaderCellDef>Emi From</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>EMI From</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element?.receivedBy?.firstName ? element?.receivedBy?.firstName : '-'}}</mat-cell>
                 </ng-container>
