--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-list/refund-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-list/refund-details.component.html
@@ -104,7 +104,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="cancelFees">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Cancellation Fees
+                    <mat-header-cell *matHeaderCellDef class="align-right">Cancellation Fees (%)
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
                         {{
