--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
@@ -2,7 +2,7 @@
     <kt-portlet-body [class]="'kt-portlet__body--fit d-flex align-items-center justify-content-center'">
         <div class="row row-no-padding row-col-separator-xl">
             <div class="col-12 text-center">
-                <h5 class="text-dark">To upload on worksheet here click on attach Excel File.</h5>
+                <h5 class="text-dark">To upload on worksheet click here on attach Excel File.</h5>
                 <p class="pt-3"><span class="font-weight-bold kt-pointer" (click)="getProductReport()">Click Here</span>
                     To Download All Products</p>
 
