next button on view disabled

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -276,7 +276,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-11">
+        <div class="col-11" *ngIf="!disable">
             <div class="kt-margin-t-20 kt-margin-b-30 text-right">
                 <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
             </div>
