--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-right py-3 col-12">
+        <div class="text-right py-3 col-12" *ngIf="!disable">
             <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
         </div>
     </div>
