--- a/gold-admin-frontend/src/app/views/pages/emi-management/customer-details/customer-details-list/customer-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/customer-details/customer-details-list/customer-details-list.component.html
@@ -88,7 +88,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
-                    <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Customer Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element?.mobileNumber ? element?.mobileNumber : '-'}}
                     </mat-cell>
