--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -99,14 +99,14 @@
                     <mat-header-cell *matHeaderCellDef class="align-right">Invoice Amount
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.finalOrderPrice ? element?.finalOrderPrice : '-'}}
+                        {{element?.order?.orderdetails[0]?.finalOrderPrice ? element?.order?.orderdetails[0]?.finalOrderPrice : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="initialAmount">
                     <mat-header-cell *matHeaderCellDef class="align-right">Initial Amount
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.initialPayment ? element?.initialPayment : '-'}}
+                        {{element?.order?.orderdetails[0]?.initialPayment ? element?.order?.orderdetails[0]?.initialPayment : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="transactionAmount">
