--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -5,7 +5,7 @@
                 <div class="row head">
                     <div class="col-4">Field</div>
                     <div class="col-4 border text-center">Appraiser</div>
-                    <div class="col-4 text-center" *ngIf="viewBMForm">Branch Manager</div>
+                    <div class="col-4 text-center" *ngIf="viewBMForm || url == 'view-loan'">Branch Manager</div>
                 </div>
                 <div class="row body border-top-bottom">
                     <div class="col-4 form-label">
@@ -21,7 +21,7 @@
                             *ngIf="!controls.applicationFormForAppraiser.value"
                             (click)="approvalOfAppraiser(true,'form')">
                     </div>
-                    <div class="col-4 text-center" *ngIf="viewBMForm">
+                    <div class="col-4 text-center" *ngIf="viewBMForm || url == 'view-loan'">
                         <img src="../../../../../../../assets/media/icons/correct.svg"
                             [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
                             *ngIf="controls.applicationFormForBM.value" (click)="approvalOfBM(false,'form')">
@@ -45,7 +45,7 @@
                             (click)="approvalOfAppraiser(true,'gold')">
 
                     </div>
-                    <div class="col-4 text-center" *ngIf="viewBMForm">
+                    <div class="col-4 text-center" *ngIf="viewBMForm || url == 'view-loan'">
                         <img src="../../../../../../../assets/media/icons/correct.svg"
                             [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable )}"
                             *ngIf="controls.goldValuationForBM.value" (click)="approvalOfBM(false,'gold')" disabled>
@@ -71,7 +71,7 @@
                             *ngIf="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">
                             Field Required</mat-error>
                     </div>
-                    <div class="col-4 text-center select" *ngIf="viewBMForm">
+                    <div class="col-4 text-center select" *ngIf="viewBMForm || url == 'view-loan'">
                         <select class="form-control" formControlName="loanStatusForBM" (change)="statusBM()"
                             [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
                             <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
@@ -90,7 +90,7 @@
                         <tr>
                             <th scope="col" style="width: 40%" >Field</th>
                             <th scope="col" style="width: 30%" class="text-center">Appraiser</th>
-                            <th scope="col" style="width: 30%" class="text-center" *ngIf="viewBMForm">Branch Manager</th>
+                            <th scope="col" style="width: 30%" class="text-center" *ngIf="viewBMForm || url == 'view-loan'">Branch Manager</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -106,7 +106,7 @@
                                     *ngIf="!controls.applicationFormForAppraiser.value"
                                     (click)="approvalOfAppraiser(true,'form')">
                             </td>
-                            <td class="rating-bm text-center" *ngIf="viewBMForm">
+                            <td class="rating-bm text-center" *ngIf="viewBMForm || url == 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
                                     [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable)}"
                                     *ngIf="controls.applicationFormForBM.value" (click)="approvalOfBM(false,'form')">
@@ -128,7 +128,7 @@
                                     *ngIf="!controls.goldValuationForAppraiser.value"
                                     (click)="approvalOfAppraiser(true,'gold')">
                             </td>
-                            <td class="rating-bm text-center" *ngIf="viewBMForm">
+                            <td class="rating-bm text-center" *ngIf="viewBMForm || url == 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/correct.svg"
                                     [ngClass]="{'cursor-not-allowed':(userType !=5 || this.disable )}"
                                     *ngIf="controls.goldValuationForBM.value" (click)="approvalOfBM(false,'gold')"
@@ -156,7 +156,7 @@
                                     *ngIf="controls.loanStatusForAppraiser.invalid && controls.loanStatusForAppraiser.touched">
                                     Field Required</mat-error>
                             </td>
-                            <td class="rating-bm" *ngIf="viewBMForm">
+                            <td class="rating-bm" *ngIf="viewBMForm || url == 'view-loan'">
                                 <select class="form-control" formControlName="loanStatusForBM" (change)="statusBM()"
                                     [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
