--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -24,7 +24,7 @@
                         <!-- Partner Name -->
                         <div class="row">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color font-weight-bold">Branch Name</label>
+                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color kt-padding-l-10">Branch Name</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="name" placeholder="Branch Name"
@@ -35,14 +35,30 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
+                            <div class="col-4 form-label">
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color">Select Parnter</label>
+                            </div>
+                            <div class="col-8">
+                                <kt-multi-select-search [items]="partners" [multiple]="true" formControlName="multiselect" [bindLabel]="'name'" [bindValue]="'id'"></kt-multi-select-search>
+                                <!-- <select class="form-control" formControlName="partnerId" autocomplete="off"
+                                    [class.isError]="controls.partnerId.touched && controls.partnerId.invalid">
+                                    <option value="" [selected]="true" [disabled]="true">Select</option>
+                                    <option [value]="branch.id" *ngFor="let branch of branch">{{branch.name |titlecase}}</option>
+                                </select> -->
+                                <!-- <input type="text" value="{{partner}}"> -->
+                                <mat-error *ngIf="controls.partnerId.touched && controls.partnerId.errors?.required">
+                                    Required field</mat-error>
+                            </div>
+                        </div>
+                        <div class="row kt-padding-t-15">
                             <div class="col-4  form-label">
-                                <label for=""  [class.mandatory]="data.action!='view'" class="text-color font-weight-bold">Address</label>
+                                <label for=""  [class.mandatory]="data.action!='view'" class="text-color kt-padding-l-10">Address</label>
                             </div>
                             <div class="col-8">
                                 <textarea class="form-control" placeholder="Enter Address" formControlName="address"
                                     placeholder="e.g 012345"
-                                    [class.isError]="controls.address.touched && controls.address.invalid" cols="20"
-                                    rows="5"></textarea>
+                                    [class.isError]="controls.address.touched && controls.address.invalid" cols="3"
+                                    rows="3"></textarea>
                                 <mat-error *ngIf="controls.address.errors?.required && controls.address.touched">
                                     Required field
                                 </mat-error>
@@ -50,7 +66,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color font-weight-bold">State</label>
+                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color kt-padding-l-10">State</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="stateId" autocomplete="off"
@@ -65,7 +81,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color font-weight-bold">City</label>
+                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color kt-padding-l-10">City</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="cityId" autocomplete="off"
@@ -80,7 +96,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color font-weight-bold">Pincode</label>
+                                <label for="" [class.mandatory]="data.action!='view'"  class="text-color kt-padding-l-10">Pincode</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" numbersOnly maxlength="6" formControlName="pinCode"
@@ -98,7 +114,7 @@
     </div>
     <kt-portlet-footer *ngIf="data.action != 'view'">
         <div class="p-3">
-            <kt-modal-footer (action)="action($event)" [value]="data.action"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="button"></kt-modal-footer>
         </div>
     </kt-portlet-footer>
 </div>
