--- a/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.html
@@ -2,8 +2,14 @@
     <ng-select [items]="items" [multiple]="multiple" [bindLabel]="bindLabel" [closeOnSelect]="false"
         [bindValue]="bindValue" formControlName="multiSelect">
         <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-            <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
-                [ngModelOptions]="{ standalone : true }" /> {{item[bindLabel] | titlecase}}
+            <label class="custom-checkbox">
+                <span class="label-checkbox">{{item[bindLabel] | titlecase}}</span>
+                <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                [ngModelOptions]="{ standalone : true }" /> 
+                <span class="checkmark checkmark-custom"></span>
+            </label>
+            <!-- <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                [ngModelOptions]="{ standalone : true }" /> {{item[bindLabel] | titlecase}} -->
         </ng-template>
         <ng-template ng-multi-label-tmp let-items="items">
             {{items[0][bindLabel] | titlecase}}&nbsp;
